[tool.poetry]
name = "vast-api-client"
version = "0.1.0"
description = ""
authors = ["cbarne02 <christopher.barnett@tufts.edu>"]
readme = "README.md"
packages = [{include = "vast_api_client"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.30.0"
pydantic = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
