[project]
name = "vast-api-client"
version = "0.1.0"
description = "python code for interacting with the VAST storage API"
authors = [{name="Chris Barnett", email="Christopher.Barnett@tufts.edu"}]
readme = "README.md"
dependencies = [
    "requests=^2.32.3",
    "pydantic=^2.8.2"
]
requires-python = ">= 3.11"

[build-system]
requires = [
    "setuptools >= 61.0",
]
build-backend = "setuptools.build_meta"

