[project]
name = "vast-api-client"
version = "0.2.0"
description = "code to abstract working with vast data platform api"
authors = [{name="Chris Barnett", email="Christopher.Barnett@tufts.edu"}]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.9.1",
    "pytest>=8.3.1"
]
requires-python = ">= 3.6"

[build-system]
requires = [
    "setuptools >= 61.0",
]
build-backend = "setuptools.build_meta"

